update swag doc and healthResponse
