# api/docs/swagger.json
@@ -219,6 +219,23 @@
                 }
             }
         },
+        "/health": {
+            "get": {
+                "description": "Returns the health status of the service",
+                "tags": [
+                    "Health"
+                ],
+                "summary": "Health Check",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.HealthResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/webhooks/idenfy/id-expiration": {
             "post": {
                 "description": "Processes the doc expiration notification for a client",
@@ -265,6 +282,17 @@
             "type": "object",
             "properties": {
                 "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "responses.HealthResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                },
+                "timestamp": {
                     "type": "string"
                 }
             }
